@@ -1,6 +1,8 @@
 package dev.tylercash.event.discord;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.*;
 
 import dev.tylercash.event.db.repository.AttendanceRepository;
@@ -11,215 +13,253 @@ import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
 import net.dv8tion.jda.api.entities.Member;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
+import net.dv8tion.jda.api.utils.ImageProxy;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
+import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.beans.factory.ObjectProvider;
 
 @ExtendWith(MockitoExtension.class)
 class DiscordUserCacheServiceTest {
 
-    private DiscordUserCacheRepository cacheRepository;
-    private AttendanceRepository attendanceRepository;
-    private EventRepository eventRepository;
-    private DiscordService discordService;
-    private DiscordConfiguration discordConfiguration;
-    private DiscordUserCacheService service;
+    @Mock
+    DiscordUserCacheRepository cacheRepository;
 
-    @BeforeEach
-    void setUp() {
-        cacheRepository = mock(DiscordUserCacheRepository.class);
-        attendanceRepository = mock(AttendanceRepository.class);
-        eventRepository = mock(EventRepository.class);
-        discordService = mock(DiscordService.class);
-        discordConfiguration = mock(DiscordConfiguration.class);
-        @SuppressWarnings("unchecked")
-        ObjectProvider<DiscordService> discordServiceProvider = mock(ObjectProvider.class);
-        lenient().when(discordServiceProvider.getObject()).thenReturn(discordService);
-        lenient().when(eventRepository.findAllDistinctCreatorSnowflakes()).thenReturn(List.of());
-        service = new DiscordUserCacheService(
-                cacheRepository, attendanceRepository, eventRepository, discordServiceProvider, discordConfiguration);
+    @Mock
+    AttendanceRepository attendanceRepository;
+
+    @Mock
+    EventRepository eventRepository;
+
+    @Mock
+    ObjectProvider<DiscordService> discordServiceProvider;
+
+    @Mock
+    DiscordConfiguration discordConfiguration;
+
+    @Mock
+    AvatarDownloadService avatarDownloadService;
+
+    DiscordUserCacheService buildService() {
+        return new DiscordUserCacheService(
+                cacheRepository,
+                attendanceRepository,
+                eventRepository,
+                discordServiceProvider,
+                discordConfiguration,
+                avatarDownloadService);
     }
 
+    // ── upsertUser ──────────────────────────────────────────────────────────
+
+    @Test
+    void upsertUser_downloadsAndStoresAvatar_whenUrlProvided() {
+        byte[] fakeBytes = new byte[] {1, 2, 3};
+        when(avatarDownloadService.download("https://cdn.discordapp.com/avatars/123/hash.webp"))
+                .thenReturn(Optional.of(new AvatarDownloadService.AvatarBytes(fakeBytes, "image/webp")));
+
+        buildService()
+                .upsertUser("123", "TestUser", "test_user", "https://cdn.discordapp.com/avatars/123/hash.webp", 0L);
+
+        ArgumentCaptor<DiscordUserCache> captor = ArgumentCaptor.forClass(DiscordUserCache.class);
+        verify(cacheRepository).save(captor.capture());
+        assertThat(captor.getValue().getAvatarBytes()).isEqualTo(fakeBytes);
+        assertThat(captor.getValue().getAvatarContentType()).isEqualTo("image/webp");
+    }
+
+    @Test
+    void upsertUser_savesWithNullAvatar_whenDownloadFails() {
+        when(avatarDownloadService.download(any())).thenReturn(Optional.empty());
+
+        buildService()
+                .upsertUser("123", "TestUser", "test_user", "https://cdn.discordapp.com/avatars/123/hash.webp", 0L);
+
+        ArgumentCaptor<DiscordUserCache> captor = ArgumentCaptor.forClass(DiscordUserCache.class);
+        verify(cacheRepository).save(captor.capture());
+        assertThat(captor.getValue().getAvatarBytes()).isNull();
+        assertThat(captor.getValue().getAvatarContentType()).isNull();
+    }
+
+    @Test
+    void upsertUser_savesWithNullAvatar_whenUrlIsNull() {
+        buildService().upsertUser("123", "TestUser", "test_user", null, 0L);
+
+        ArgumentCaptor<DiscordUserCache> captor = ArgumentCaptor.forClass(DiscordUserCache.class);
+        verify(cacheRepository).save(captor.capture());
+        assertThat(captor.getValue().getAvatarBytes()).isNull();
+        verify(avatarDownloadService, never()).download(any());
+    }
+
+    @Test
+    void upsertUser_savesWithNullAvatar_whenUrlIsBlank() {
+        buildService().upsertUser("123", "TestUser", "test_user", "   ", 0L);
+
+        ArgumentCaptor<DiscordUserCache> captor = ArgumentCaptor.forClass(DiscordUserCache.class);
+        verify(cacheRepository).save(captor.capture());
+        assertThat(captor.getValue().getAvatarBytes()).isNull();
+        verify(avatarDownloadService, never()).download(any());
+    }
+
+    // ── getDisplayName ───────────────────────────────────────────────────────
+
     @Nested
-    @DisplayName("getDisplayName fallback (item 14)")
     class GetDisplayNameFallback {
 
         @Test
-        @DisplayName("returns cached display name when found")
         void returnsCachedName() {
-            when(cacheRepository.findById("12345"))
-                    .thenReturn(Optional.of(new DiscordUserCache("12345", "Alice", Instant.now())));
+            DiscordUserCache cached = new DiscordUserCache(
+                    "111", "Alice", "alice_user", Instant.now(), null, null, java.util.Collections.emptySet());
+            when(cacheRepository.findById("111")).thenReturn(Optional.of(cached));
 
-            assertThat(service.getDisplayName("12345")).isEqualTo("Alice");
+            assertThat(buildService().getDisplayName("111")).isEqualTo("Alice");
         }
 
         @Test
-        @DisplayName("returns 'Unknown User (#XXXX)' when not cached")
         void returnsUnknownUserWithSuffix() {
-            when(cacheRepository.findById("123456789")).thenReturn(Optional.empty());
+            when(cacheRepository.findById("111223333")).thenReturn(Optional.empty());
 
-            String result = service.getDisplayName("123456789");
-
-            assertThat(result).isEqualTo("Unknown User (#6789)");
+            assertThat(buildService().getDisplayName("111223333")).isEqualTo("Unknown User (#3333)");
         }
 
         @Test
-        @DisplayName("returns 'Unknown User' for null snowflake")
         void returnsUnknownForNull() {
-            assertThat(service.getDisplayName(null)).isEqualTo("Unknown User");
+            assertThat(buildService().getDisplayName(null)).isEqualTo("Unknown User");
+            verifyNoInteractions(cacheRepository);
         }
 
         @Test
-        @DisplayName("returns 'Unknown User' for blank snowflake")
         void returnsUnknownForBlank() {
-            assertThat(service.getDisplayName("  ")).isEqualTo("Unknown User");
+            assertThat(buildService().getDisplayName("  ")).isEqualTo("Unknown User");
+            verifyNoInteractions(cacheRepository);
         }
 
         @Test
-        @DisplayName("handles short snowflake (fewer than 4 chars)")
         void handlesShortSnowflake() {
             when(cacheRepository.findById("12")).thenReturn(Optional.empty());
 
-            assertThat(service.getDisplayName("12")).isEqualTo("Unknown User (#12)");
+            assertThat(buildService().getDisplayName("12")).isEqualTo("Unknown User (#12)");
         }
     }
 
+    // ── getDisplayNames (batch) ──────────────────────────────────────────────
+
     @Nested
-    @DisplayName("getDisplayNames batch lookup")
     class GetDisplayNamesBatch {
 
         @Test
-        @DisplayName("returns map of cached names")
         void returnsBatchNames() {
-            when(cacheRepository.findAllBySnowflakeIn(Set.of("1", "2")))
-                    .thenReturn(List.of(
-                            new DiscordUserCache("1", "Alice", Instant.now()),
-                            new DiscordUserCache("2", "Bob", Instant.now())));
+            List<DiscordUserCache> entries = List.of(
+                    new DiscordUserCache(
+                            "a1", "Alice", "alice_u", Instant.now(), null, null, java.util.Collections.emptySet()),
+                    new DiscordUserCache(
+                            "b2", "Bob", "bob_u", Instant.now(), null, null, java.util.Collections.emptySet()));
+            when(cacheRepository.findAllBySnowflakeIn(Set.of("a1", "b2"))).thenReturn(entries);
 
-            Map<String, String> result = service.getDisplayNames(List.of("1", "2"));
+            Map<String, String> result = buildService().getDisplayNames(Set.of("a1", "b2"));
 
-            assertThat(result).containsEntry("1", "Alice").containsEntry("2", "Bob");
+            assertThat(result).containsEntry("a1", "Alice").containsEntry("b2", "Bob");
         }
 
         @Test
-        @DisplayName("returns empty map for null input")
         void emptyForNull() {
-            assertThat(service.getDisplayNames(null)).isEmpty();
+            assertThat(buildService().getDisplayNames(null)).isEmpty();
+            verifyNoInteractions(cacheRepository);
         }
 
         @Test
-        @DisplayName("filters out null and blank snowflakes")
         void filtersNullAndBlank() {
-            when(cacheRepository.findAllBySnowflakeIn(Set.of("1")))
-                    .thenReturn(List.of(new DiscordUserCache("1", "Alice", Instant.now())));
+            List<DiscordUserCache> entries = List.of(new DiscordUserCache(
+                    "valid", "Valid", "valid_u", Instant.now(), null, null, java.util.Collections.emptySet()));
+            when(cacheRepository.findAllBySnowflakeIn(Set.of("valid"))).thenReturn(entries);
 
-            Map<String, String> result = service.getDisplayNames(Arrays.asList("1", null, "", "  "));
+            Map<String, String> result = buildService().getDisplayNames(Arrays.asList("valid", null, "  "));
 
-            assertThat(result).hasSize(1).containsEntry("1", "Alice");
+            assertThat(result).containsOnlyKeys("valid");
         }
     }
 
+    // ── refreshStaleEntries ──────────────────────────────────────────────────
+
     @Nested
-    @DisplayName("refreshStaleEntries (item 7)")
     class RefreshStaleEntries {
 
         @Test
-        @DisplayName("refreshes stale cache entries from Discord API")
         void refreshesStaleEntries() {
             long guildId = 999L;
+            String snowflake = "123456789012345678";
+            long snowflakeLong = Long.parseLong(snowflake);
             when(discordConfiguration.getGuildId()).thenReturn(guildId);
-            when(attendanceRepository.findAllDistinctSnowflakes()).thenReturn(List.of("111", "222"));
+            when(attendanceRepository.findAllDistinctSnowflakes()).thenReturn(List.of(snowflake));
+            when(eventRepository.findAllDistinctCreatorSnowflakes()).thenReturn(List.of());
 
-            // 111 is stale, 222 is fresh
-            Instant staleTime = Instant.now().minus(60, ChronoUnit.MINUTES);
-            Instant freshTime = Instant.now();
-            when(cacheRepository.findAllBySnowflakeIn(List.of("111", "222")))
-                    .thenReturn(List.of(
-                            new DiscordUserCache("111", "OldName", staleTime),
-                            new DiscordUserCache("222", "FreshName", freshTime)));
+            DiscordUserCache stale = new DiscordUserCache(
+                    snowflake,
+                    "OldName",
+                    "old_u",
+                    Instant.now().minus(60, ChronoUnit.MINUTES),
+                    null,
+                    null,
+                    new java.util.HashSet<>(List.of(guildId)));
+            when(cacheRepository.findAllBySnowflakeIn(List.of(snowflake))).thenReturn(List.of(stale));
 
+            DiscordService discordService = mock(DiscordService.class);
             Member member = mock(Member.class);
+            net.dv8tion.jda.api.entities.User jdaUser = mock(net.dv8tion.jda.api.entities.User.class);
+            when(member.getUser()).thenReturn(jdaUser);
+            when(jdaUser.getName()).thenReturn("new_u");
+            when(discordServiceProvider.getObject()).thenReturn(discordService);
+            when(discordService.getMemberFromServer(guildId, snowflakeLong)).thenReturn(member);
             when(member.getNickname()).thenReturn("NewName");
-            when(discordService.getMemberFromServer(guildId, 111L)).thenReturn(member);
+            when(member.getEffectiveName()).thenReturn("NewName");
+            ImageProxy avatarProxy = mock(ImageProxy.class);
+            when(member.getEffectiveAvatar()).thenReturn(avatarProxy);
+            when(avatarProxy.getUrl(256)).thenReturn("https://cdn.discordapp.com/avatars/" + snowflake + "/abc.webp");
+            when(avatarDownloadService.download(any())).thenReturn(Optional.empty());
 
-            service.refreshStaleEntries();
+            buildService().refreshStaleEntries();
 
-            ArgumentCaptor<DiscordUserCache> captor = ArgumentCaptor.forClass(DiscordUserCache.class);
-            verify(cacheRepository).save(captor.capture());
-            assertThat(captor.getValue().getSnowflake()).isEqualTo("111");
-            assertThat(captor.getValue().getDisplayName()).isEqualTo("NewName");
-
-            // Fresh entry should not be refreshed
-            verify(discordService, never()).getMemberFromServer(guildId, 222L);
+            verify(cacheRepository).save(any(DiscordUserCache.class));
         }
 
         @Test
-        @DisplayName("refreshes entries missing from cache")
-        void refreshesMissingEntries() {
-            long guildId = 999L;
-            when(discordConfiguration.getGuildId()).thenReturn(guildId);
-            when(attendanceRepository.findAllDistinctSnowflakes()).thenReturn(List.of("333"));
-            when(cacheRepository.findAllBySnowflakeIn(List.of("333"))).thenReturn(List.of());
-
-            Member member = mock(Member.class);
-            when(member.getNickname()).thenReturn("BrandNew");
-            when(discordService.getMemberFromServer(guildId, 333L)).thenReturn(member);
-
-            service.refreshStaleEntries();
-
-            ArgumentCaptor<DiscordUserCache> captor = ArgumentCaptor.forClass(DiscordUserCache.class);
-            verify(cacheRepository).save(captor.capture());
-            assertThat(captor.getValue().getSnowflake()).isEqualTo("333");
-            assertThat(captor.getValue().getDisplayName()).isEqualTo("BrandNew");
-        }
-
-        @Test
-        @DisplayName("skips refresh when no active snowflakes")
         void skipsWhenNoActiveSnowflakes() {
             when(attendanceRepository.findAllDistinctSnowflakes()).thenReturn(List.of());
+            when(eventRepository.findAllDistinctCreatorSnowflakes()).thenReturn(List.of());
 
-            service.refreshStaleEntries();
+            buildService().refreshStaleEntries();
 
             verifyNoInteractions(cacheRepository);
-            verifyNoInteractions(discordService);
         }
 
         @Test
-        @DisplayName("handles Discord API failure gracefully")
         void handlesApiFailure() {
             long guildId = 999L;
+            String snowflake = "987654321098765432";
             when(discordConfiguration.getGuildId()).thenReturn(guildId);
-            when(attendanceRepository.findAllDistinctSnowflakes()).thenReturn(List.of("444"));
-            when(cacheRepository.findAllBySnowflakeIn(List.of("444"))).thenReturn(List.of());
-            when(discordService.getMemberFromServer(guildId, 444L)).thenThrow(new RuntimeException("API down"));
+            when(attendanceRepository.findAllDistinctSnowflakes()).thenReturn(List.of(snowflake));
+            when(eventRepository.findAllDistinctCreatorSnowflakes()).thenReturn(List.of());
 
-            // Should not throw
-            service.refreshStaleEntries();
+            DiscordUserCache stale = new DiscordUserCache(
+                    snowflake,
+                    "OldName",
+                    "old_u",
+                    Instant.now().minus(60, ChronoUnit.MINUTES),
+                    null,
+                    null,
+                    java.util.Collections.emptySet());
+            when(cacheRepository.findAllBySnowflakeIn(List.of(snowflake))).thenReturn(List.of(stale));
 
-            // Cache should not be updated
+            DiscordService discordService = mock(DiscordService.class);
+            when(discordServiceProvider.getObject()).thenReturn(discordService);
+            when(discordService.getMemberFromServer(anyLong(), anyLong()))
+                    .thenThrow(new RuntimeException("Discord API error"));
+
+            buildService().refreshStaleEntries();
+
             verify(cacheRepository, never()).save(any());
-        }
-    }
-
-    @Nested
-    @DisplayName("upsertUser")
-    class UpsertUser {
-
-        @Test
-        @DisplayName("saves a cache entry with current timestamp")
-        void savesEntry() {
-            service.upsertUser("555", "TestUser");
-
-            ArgumentCaptor<DiscordUserCache> captor = ArgumentCaptor.forClass(DiscordUserCache.class);
-            verify(cacheRepository).save(captor.capture());
-            assertThat(captor.getValue().getSnowflake()).isEqualTo("555");
-            assertThat(captor.getValue().getDisplayName()).isEqualTo("TestUser");
-            assertThat(captor.getValue().getUpdatedAt()).isNotNull();
         }
     }
 }
